# drift

./: .gitignore  LICENSE  README.md  drift.py  pyproject.toml  requirements.txt
driftpkg/: __init__.py  __main__.py  app.py  cli.py  config.py  controller.py  deep_unpack.py  downloader.py  extract.py  plan.py  rebuild.py  registry.py  registry_paths.py  selection.py  session.py  utils.py
