[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-registry-dumper"
version = "3.0.0"
description = "Docker registry dumper and filesystem rebuilder with configurable parallel ranged downloads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["docker", "registry", "oci", "download", "container"]
authors = [{ name = "drift contributors" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Software Distribution",
]
dependencies = [
  "requests>=2.28.0",
  "tqdm>=4.65.0",
]

[project.scripts]
drift = "driftpkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["driftpkg*"]
